--- a/PapaBet.html
+++ b/PapaBet.html
@@ -6,7 +6,7 @@
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
 
-      [{"id":"1,"match":"Brentford vs West Ham","homeWin":12,"homeDraw":14,"homeLost":9,"awayWin":10,"awayDraw":7,"awayLost":18,"homeRecord":"wwdll","awayRecord":"wwlll","betweenRecord":hha}]
+      [{"id":"1","match":"Brentford vs West Ham","homeWin":12,"homeDraw":14,"homeLost":9,"awayWin":10,"awayDraw":7,"awayLost":18,"homeRecord":"wwdll","awayRecord":"wwlll","betweenRecord":"hha","homeBet":2.35,"drawBet":4,"awayBet":8}]
     </pre>
       
     <div id="speechify-global-notifications"></div>
