--- a/PapaBet.html
+++ b/PapaBet.html
@@ -6,8 +6,8 @@
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
 
-      [{"id":"1","match":"Brentford vs West Ham","homeWin":12,"homeDraw":14,"homeLost":9,"awayWin":10,"awayDraw":7,"awayLost":18,"homeRecord":"wwdll","awayRecord":"wwlll","betweenRecord":"hha","homeBet":2.35,"drawBet":4,"awayBet":8},
-      {"id":"2","match":"Chelsea vs Arsenal","homeWin":5,"homeDraw":8,"homeLost":13,"awayWin":18,"awayDraw":5,"awayLost":3,"homeRecord":"wldll","awayRecord":"wwwdl","betweenRecord":"haa","homeBet":4,"drawBet":4,"awayBet":2.6}]
+      [{"id":"1","match":"Brentford vs West Ham","homeWin":12,"homeDraw":14,"homeLost":9,"awayWin":10,"awayDraw":7,"awayLost":18,"homeRecord":"wwdll","awayRecord":"wwlll","betweenRecord":"hha","homeBet":2.35,"drawBet":4,"awayBet":8,"x1Bet":1.7,"x2Bet":1.2},
+      {"id":"2","match":"Chelsea vs Arsenal","homeWin":5,"homeDraw":8,"homeLost":13,"awayWin":18,"awayDraw":5,"awayLost":3,"homeRecord":"wldll","awayRecord":"wwwdl","betweenRecord":"haa","homeBet":4,"drawBet":4,"awayBet":2.6,"x1Bet":1.7,"x2Bet":1.2}]
     </pre>
       
     <div id="speechify-global-notifications"></div>
