--- a/PapaBet.html
+++ b/PapaBet.html
@@ -5,15 +5,15 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-[{"id":"1","match":"Lincoln vs Qarabag","homeWin":17,"homeDraw":1,"homeLost":2,"awayWin":28,"awayDraw":6,"awayLost":2,"homeRecord":"llwww","awayRecord":"wwlld","betweenRecord":"had","homeBet":7.3,"drawBet":4.8,"awayBet":1.38,"x1Bet":3.15,"x2Bet":1.11
-},{"id":"2","match":"Hamrun vs Maccabi Haifa","homeWin":22,"homeDraw":3,"homeLost":1,"awayWin":27,"awayDraw":3,"awayLost":6,"homeRecord":"dwwww","awayRecord":"wwwll","betweenRecord":"had","homeBet":6.1,"drawBet":4.45,"awayBet":1.47,"x1Bet":2.72,"x2Bet":1.14
-},{"id":"3","match":"Rakow vs Flora","homeWin":23,"homeDraw":6,"homeLost":5,"awayWin":14,"awayDraw":4,"awayLost":1,"homeRecord":"wwdll","awayRecord":"wwddl","betweenRecord":"had","homeBet":1.27,"drawBet":5.4,"awayBet":10.5,"x1Bet":1.07,"x2Bet":3.95
-},{"id":"4","match":"Balkani vs Ludogorets","homeWin":20,"homeDraw":13,"homeLost":3,"awayWin":23,"awayDraw":5,"awayLost":2,"homeRecord":"ddwww","awayRecord":"wwwww","betweenRecord":"had","homeBet":4.05,"drawBet":3.25,"awayBet":2.02,"x1Bet":1.83,"x2Bet":1.26
-},{"id":"5","match":"Klaksvik vs Ferencvaros","homeWin":16,"homeDraw":1,"homeLost":0,"awayWin":19,"awayDraw":6,"awayLost":8,"homeRecord":"wwwww","awayRecord":"ddlww","betweenRecord":"had","homeBet":5.9,"drawBet":4.2,"awayBet":1.52,"x1Bet":2.6,"x2Bet":1.15
-},{"id":"6","match":"HJK vs Larbe","homeWin":7,"homeDraw":7,"homeLost":1,"awayWin":22,"awayDraw":7,"awayLost":4,"homeRecord":"dddww","awayRecord":"wwwwl","betweenRecord":"had","homeBet":1.24,"drawBet":5.7,"awayBet":11.75,"x1Bet":1.06,"x2Bet":4.3
-},{"id":"8","match":"Farul Constanta vs Sheriff","homeWin":19,"homeDraw":7,"homeLost":4,"awayWin":7,"awayDraw":3,"awayLost":0,"homeRecord":"llldw","awayRecord":"wwwwd","betweenRecord":"had","homeBet":2.12,"drawBet":3.45,"awayBet":3.45,"x1Bet":1.33,"x2Bet":1.75
-},{"id":"9","match":"Slovan Bratislava vs Swift Hesperange","homeWin":14,"homeDraw":5,"homeLost":3,"awayWin":24,"awayDraw":6,"awayLost":1,"homeRecord":"lwwww","awayRecord":"wwwdd","betweenRecord":"had","homeBet":1.27,"drawBet":5.6,"awayBet":9.75,"x1Bet":1.07,"x2Bet":3.95}]
-    
+[{"id":"1","match":"Lincoln vs Qarabag","homeWin":17,"homeDraw":1,"homeLost":2,"awayWin":28,"awayDraw":6,"awayLost":2,"homeRecord":"llwww","awayRecord":"wwlld","betweenRecord":"had","homeBet":7.3,"drawBet":4.8,"awayBet":1.38,"x1Bet":3.15,"x2Bet":1.11,"homeRank":51,"awayRank":"29
+"},{"id":"2","match":"Hamrun vs Maccabi Haifa","homeWin":22,"homeDraw":3,"homeLost":1,"awayWin":27,"awayDraw":3,"awayLost":6,"homeRecord":"dwwww","awayRecord":"wwwll","betweenRecord":"had","homeBet":6.1,"drawBet":4.45,"awayBet":1.47,"x1Bet":2.72,"x2Bet":1.14,"homeRank":44,"awayRank":"18
+"},{"id":"3","match":"Rakow vs Flora","homeWin":23,"homeDraw":6,"homeLost":5,"awayWin":14,"awayDraw":4,"awayLost":1,"homeRecord":"wwdll","awayRecord":"wwddl","betweenRecord":"had","homeBet":1.27,"drawBet":5.4,"awayBet":10.5,"x1Bet":1.07,"x2Bet":3.95,"homeRank":23,"awayRank":"43
+"},{"id":"4","match":"Balkani vs Ludogorets","homeWin":20,"homeDraw":13,"homeLost":3,"awayWin":23,"awayDraw":5,"awayLost":2,"homeRecord":"ddwww","awayRecord":"wwwww","betweenRecord":"had","homeBet":4.05,"drawBet":3.25,"awayBet":2.02,"x1Bet":1.83,"x2Bet":1.26,"homeRank":36,"awayRank":"27
+"},{"id":"5","match":"Klaksvik vs Ferencvaros","homeWin":16,"homeDraw":1,"homeLost":0,"awayWin":19,"awayDraw":6,"awayLost":8,"homeRecord":"wwwww","awayRecord":"ddlww","betweenRecord":"had","homeBet":5.9,"drawBet":4.2,"awayBet":1.52,"x1Bet":2.6,"x2Bet":1.15,"homeRank":41,"awayRank":"26
+"},{"id":"6","match":"HJK vs Larbe","homeWin":7,"homeDraw":7,"homeLost":1,"awayWin":22,"awayDraw":7,"awayLost":4,"homeRecord":"dddww","awayRecord":"wwwwl","betweenRecord":"had","homeBet":1.24,"drawBet":5.7,"awayBet":11.75,"x1Bet":1.06,"x2Bet":4.3,"homeRank":33,"awayRank":"39
+"},{"id":"7","match":"Hacken vs The New Saints","homeWin":9,"homeDraw":2,"homeLost":3,"awayWin":19,"awayDraw":3,"awayLost":0,"homeRecord":"ldwww","awayRecord":"wwwwl","betweenRecord":"had","homeBet":1.17,"drawBet":6.8,"awayBet":15.5,"x1Bet":1.04,"x2Bet":5.4,"homeRank":21,"awayRank":"49
+"},{"id":"8","match":"Farul Constanta vs Sheriff","homeWin":19,"homeDraw":7,"homeLost":4,"awayWin":7,"awayDraw":3,"awayLost":0,"homeRecord":"llldw","awayRecord":"wwwwd","betweenRecord":"had","homeBet":2.12,"drawBet":3.45,"awayBet":3.45,"x1Bet":1.33,"x2Bet":1.75,"homeRank":25,"awayRank":"30
+"},{"id":"9","match":"Slovan Bratislava vs Swift Hesperange","homeWin":14,"homeDraw":5,"homeLost":3,"awayWin":24,"awayDraw":6,"awayLost":1,"homeRecord":"lwwww","awayRecord":"wwwdd","betweenRecord":"had","homeBet":1.27,"drawBet":5.6,"awayBet":9.75,"x1Bet":1.07,"x2Bet":3.95,"homeRank":28,"awayRank":47}]
     </pre>
       
     <div id="speechify-global-notifications"></div>
