--- a/logoQuizQuestions.html
+++ b/logoQuizQuestions.html
@@ -6,7 +6,7 @@
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
 
-      [{"id":"0","Question":"barcelona_img.png ","Answer":"Barcelona","SecondAnswer":"Espanyol","Difficulty":"1"}]
+      [{"id":"0","Question":"https://alexpaps.github.io/supersimple-website/images/barcelona_img.png","Answer":"Barcelona","SecondAnswer":"Espanyol","Difficulty":"1"}]
 
     </pre>
       
