--- a/logoQuizQuestions.html
+++ b/logoQuizQuestions.html
@@ -6,8 +6,11 @@
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
 
-      [{"id":"0","Question":"https://alexpaps.github.io/supersimple-website/images/barcelona_img.png","Answer":"Barcelona","SecondAnswer":"Espanyol","Difficulty":"1"}]
 
+[{"id":"0","Question":"https://alexpaps.github.io/supersimple-website/images/barcelona_img.png
+","Answer":"Barcelona","SecondAnswer":"Espanyol","Difficulty":"1
+"},{"id":"1","Question":"https://alexpaps.github.io/supersimple-website/images/birmingham.png
+","Answer":"Birmingham","SecondAnswer":"Blackburn","Difficulty":"2"}]
     </pre>
       
     <div id="speechify-global-notifications"></div>
