--- a/historyQuestions.html
+++ b/historyQuestions.html
@@ -5,7 +5,13 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-[{"id":"0","Question":"Who assisted Zidane's goal in the Champions League Final of 2002?","Answer":"Roberto Carlos","SecondAnswer":"Raul","Difficulty":"2"}]
+[{"id":"0","Question":"Who assisted Zidane's goal in the Champions League Final of 2002?","Answer":"Roberto Carlos","SecondAnswer":"Raul","Difficulty":"2"},{"id":"1","Question":"Which team was the finalist of the first European Cup with Real Madrid as the winner?
+","Answer":"Stade Reims","SecondAnswer":"Fiorentina","Difficulty":"3
+"},{"id":"2","Question":"How many teams have won back to back European Cups/Champions Leagues?
+","Answer":"8","SecondAnswer":"7","Difficulty":"3
+"},{"id":"3","Question":"Who is the last scorer of the European Cup?
+","Answer":"Ronald Koeman","SecondAnswer":"Hristo Stoichkov","Difficulty":"2
+"}]
 
     </pre>
       
