--- a/historyQuestions.html
+++ b/historyQuestions.html
@@ -5,13 +5,170 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-[{"id":"0","Question":"Who assisted Zidane's goal in the Champions League Final of 2002?","Answer":"Roberto Carlos","SecondAnswer":"Raul","Difficulty":"2"},{"id":"1","Question":"Which team was the finalist of the first European Cup with Real Madrid as the winner?
+[{"id":"0","Question":"Who assisted Zidane's goal in the Champions League Final of 2002?
+","Answer":"Roberto Carlos","SecondAnswer":"Raul","Difficulty":"2
+"},{"id":"1","Question":"Which team was the finalist of the first European Cup with Real Madrid as the winner?
 ","Answer":"Stade Reims","SecondAnswer":"Fiorentina","Difficulty":"3
 "},{"id":"2","Question":"How many teams have won back to back European Cups/Champions Leagues?
 ","Answer":"8","SecondAnswer":"7","Difficulty":"3
 "},{"id":"3","Question":"Who is the last scorer of the European Cup?
 ","Answer":"Ronald Koeman","SecondAnswer":"Hristo Stoichkov","Difficulty":"2
-"}]
+"},{"id":"4","Question":"Which English club was the first to win the European Cup in 1968?
+","Answer":"Manchester United","SecondAnswer":"Liverpool","Difficulty":"2
+"},{"id":"5","Question":"Who is the all-time top scorer for the German national team?
+","Answer":"Miroslav Klose","SecondAnswer":"	Gerd Müller","Difficulty":"2
+"},{"id":"6","Question":"Who is the youngest player to ever score in a World Cup tournament?
+","Answer":"Pele","SecondAnswer":"Michael Owen","Difficulty":"1
+"},{"id":"7","Question":"Who is now the youngest and the oldest player to both score and assist in a single World Cup game since the start of the 1966 tournament?
+","Answer":"Lionel Messi","SecondAnswer":"Pele","Difficulty":"1
+"},{"id":"8","Question":"Who is the youngest English footballer to score at the World Cup?
+","Answer":"Michael Owen","SecondAnswer":"Harry Kane","Difficulty":"2
+"},{"id":"9","Question":"Who is the youngest Brazil footballer to score at the World Cup?
+","Answer":"Pele","SecondAnswer":"Neymar","Difficulty":"1
+"},{"id":"10","Question":"Who is the youngest Mexico footballer to score at the World Cup?
+","Answer":"Manuel Rosas","SecondAnswer":"Lozano","Difficulty":"2
+"},{"id":"11","Question":"Who is the youngest Spain footballer to score at the World Cup?
+","Answer":"Gavi","SecondAnswer":"Fernando Torres","Difficulty":"1
+"},{"id":"12","Question":"Who is the youngest Argentina footballer to score at the World Cup?
+","Answer":"Lionel Messi","SecondAnswer":"Diego Maradona","Difficulty":"1
+"},{"id":"13","Question":"Who is the youngest Belgium footballer to score at the World Cup?
+","Answer":"Divock Origi","SecondAnswer":"Romelu Lukaku","Difficulty":"2
+"},{"id":"14","Question":"Which club did Jürgen Klopp manage before joining Borussia Dortmund?
+","Answer":"Mainz","SecondAnswer":"Hannover 96","Difficulty":"1
+"},{"id":"15","Question":"Which player holds the record for the most goals scored in a single Premier League season?
+","Answer":"Erling Haaland","SecondAnswer":"Alan Shearer","Difficulty":"1
+"},{"id":"16","Question":"Which country won the 1930 FIFA World Cup?
+","Answer":"Uruguay","SecondAnswer":"Argentina","Difficulty":"2
+"},{"id":"17","Question":"Which country won the 1934 FIFA World Cup?
+","Answer":"Italy","SecondAnswer":"Czechoslovakia","Difficulty":"3
+"},{"id":"18","Question":"Which country won the 1938 FIFA World Cup?
+","Answer":"Italy","SecondAnswer":"France","Difficulty":"3
+"},{"id":"19","Question":"Which country won the 1942 FIFA World Cup?
+","Answer":"None","SecondAnswer":"Uruguay","Difficulty":"3
+"},{"id":"20","Question":"Which country won the 1950 FIFA World Cup?
+","Answer":"Uruguay","SecondAnswer":"Brazil","Difficulty":"3
+"},{"id":"21","Question":"Which country won the 1954 FIFA World Cup?
+","Answer":"Germany","SecondAnswer":"France","Difficulty":"3
+"},{"id":"22","Question":"Which country won the 1958 FIFA World Cup?
+","Answer":"Brazil","SecondAnswer":"Sweden","Difficulty":"3
+"},{"id":"23","Question":"Which country won the 1962 FIFA World Cup?
+","Answer":"Brazil","SecondAnswer":"Argentina","Difficulty":"3
+"},{"id":"24","Question":"Which country won the 1966 FIFA World Cup?
+","Answer":"England","SecondAnswer":"Italy","Difficulty":"3
+"},{"id":"25","Question":"Which country won the 1970 FIFA World Cup?
+","Answer":"Brazil","SecondAnswer":"Argentina","Difficulty":"3
+"},{"id":"26","Question":"Which country won the 1974 FIFA World Cup?
+","Answer":"Germany","SecondAnswer":"France","Difficulty":"3
+"},{"id":"27","Question":"Which country won the 1978 FIFA World Cup?
+","Answer":"Argentina","SecondAnswer":"Uruguay","Difficulty":"3
+"},{"id":"28","Question":"Which country won the 1982 FIFA World Cup?
+","Answer":"Italy","SecondAnswer":"Germany","Difficulty":"3
+"},{"id":"29","Question":"Which country won the 1986 FIFA World Cup?
+","Answer":"Argentina","SecondAnswer":"Uruguay","Difficulty":"3
+"},{"id":"30","Question":"Which country won the 1990 FIFA World Cup?
+","Answer":"Germany","SecondAnswer":"Italy","Difficulty":"3
+"},{"id":"31","Question":"Which country won the 1994 FIFA World Cup?
+","Answer":"Brazil","SecondAnswer":"France","Difficulty":"3
+"},{"id":"32","Question":"Which country won the 1998 FIFA World Cup?
+","Answer":"France","SecondAnswer":"Brazil","Difficulty":"3
+"},{"id":"33","Question":"Which country won the 2002 FIFA World Cup?
+","Answer":"Brazil","SecondAnswer":"Germany","Difficulty":"3
+"},{"id":"34","Question":"Which country won the 2006 FIFA World Cup?
+","Answer":"Italy","SecondAnswer":"France","Difficulty":"3
+"},{"id":"35","Question":"Which country won the 2010 FIFA World Cup?
+","Answer":"Spain","SecondAnswer":"Netherlands","Difficulty":"2
+"},{"id":"36","Question":"Which country won the 2014 FIFA World Cup?
+","Answer":"Germany","SecondAnswer":"Argentina","Difficulty":"1
+"},{"id":"37","Question":"Which country won the 2018 FIFA World Cup?
+","Answer":"France","SecondAnswer":"Croatia","Difficulty":"1
+"},{"id":"38","Question":"Which country won the 2022 FIFA World Cup?
+","Answer":"Argentina","SecondAnswer":"France","Difficulty":"1
+"},{"id":"39","Question":"Which year the finals featured 32 teams for the first time, up from 24?
+","Answer":"1998","SecondAnswer":"1994","Difficulty":"3
+"},{"id":"40","Question":"Which year the finals featured 24 teams for the last time?
+","Answer":"1994","SecondAnswer":"1986","Difficulty":"3
+"},{"id":"41","Question":"Which year the finals featured 24 teams for the first time?
+","Answer":"1982","SecondAnswer":"1970","Difficulty":"3
+"},{"id":"42","Question":"Which year the finals featured 16 teams for the last time?
+","Answer":"1978","SecondAnswer":"1966","Difficulty":"3
+"},{"id":"43","Question":"How many teams were in the 1930 World Cup?
+","Answer":"13","SecondAnswer":"16","Difficulty":"3
+"},{"id":"44","Question":"In what year did the UEFA Cup change its name to the UEFA Europa League?
+","Answer":"2009/10","SecondAnswer":"2007/8","Difficulty":"2
+"},{"id":"45","Question":"Which club has won the most FA Cup titles?
+","Answer":"Arsenal","SecondAnswer":"Manchester United","Difficulty":"1
+"},{"id":"46","Question":"Which club has won the most Carabao Cup titles?
+","Answer":"Liverpool","SecondAnswer":"Manchester City","Difficulty":"1
+"},{"id":"47","Question":"Which club has won the most Premier League(and Premiership) titles(1888-)?
+","Answer":"Manchester United","SecondAnswer":"Liverpool","Difficulty":"1
+"},{"id":"48","Question":"Which club has won the most Premier League titles(1992-)?
+","Answer":"Manchester United","SecondAnswer":"Arsenal","Difficulty":"1
+"},{"id":"49","Question":"Which club has won the first Premier League title(1992-)?
+","Answer":"Manchester United","SecondAnswer":"Arsenal","Difficulty":"1
+"},{"id":"50","Question":"Which club has won the first Premier League(and Premiership) title(1888-)?
+","Answer":"Preston North End","SecondAnswer":"Sheffield Football Club","Difficulty":"3
+"},{"id":"51","Question":"Which is the first football club in the world?
+","Answer":"Sheffield Football Club","SecondAnswer":"Preston North End","Difficulty":"2
+"},{"id":"52","Question":"Who scored the fastest hat-trick in Premier League history?
+","Answer":"Sadio Mane","SecondAnswer":"Alan Shearer","Difficulty":"2
+"},{"id":"53","Question":"Who is the only goalkeeper to have won the Ballon d'Or?
+","Answer":"Lev Yashin","SecondAnswer":"Manuel Neuer","Difficulty":"2
+"},{"id":"54","Question":"Who is the only defender to have won the Ballon d'Or?
+","Answer":"Fabio Cannavaro","SecondAnswer":"Sergio Ramos","Difficulty":"1
+"},{"id":"55","Question":"Which club has won the most Scottish Premiership titles?
+","Answer":"Rangers","SecondAnswer":"Celtic","Difficulty":"1
+"},{"id":"56","Question":"Which club has won the Scottish Premiership title except Rangers and Celtic?
+","Answer":"Aberdeen","SecondAnswer":"Hearts","Difficulty":"2
+"},{"id":"57","Question":"In which year did the "Golden Goal" rule come into effect in football?
+","Answer":"1993","SecondAnswer":"1986","Difficulty":"3
+"},{"id":"58","Question":"Which club did Thierry Henry play for before joining Arsenal?
+","Answer":"Monaco","SecondAnswer":"Juventus","Difficulty":"2
+"},{"id":"59","Question":"Who was the first African player to win the FIFA World Player of the Year award?
+","Answer":"George Weah","SecondAnswer":"Mahmoud El Khatib","Difficulty":"3
+"},{"id":"60","Question":"Who was the manager of the Liverpool team that won the UEFA Champions League in 2005,coming back from a 3-0 deficit to win on penalties?
+","Answer":"Rafael Benítez","SecondAnswer":"Roy Hodgson","Difficulty":"3
+"},{"id":"61","Question":"Which team is nicknamed "The Baggies"?
+","Answer":"West Bromwich Albion","SecondAnswer":"Aston Villa","Difficulty":"2
+"},{"id":"62","Question":"In which year was the Video Assistant Referee (VAR) system first introduced in official competitions?
+","Answer":"2016","SecondAnswer":"2015","Difficulty":"3
+"},{"id":"63","Question":"Which Italian referee was known for his strict enforcement of the rules and was often referred to as the "Policeman of the Pitch"?
+","Answer":"Pierluigi Collina","SecondAnswer":"Daniele Orsato","Difficulty":"1
+"},{"id":"64","Question":"Which club holds the record for the most consecutive promotions in English football, climbing from the fourth to the first division in just four seasons?
+","Answer":"Swansea City","SecondAnswer":"Leicester City","Difficulty":"3
+"},{"id":"65","Question":"Who is the oldest outfield player to have ever appeared in a Premier League match?
+","Answer":"John Burridge","SecondAnswer":"Neville Southall","Difficulty":"3
+"},{"id":"66","Question":"Which stadium is known as "The Theatre of Dreams"?
+","Answer":"Old Trafford","SecondAnswer":"Anfield","Difficulty":"1
+"},{"id":"67","Question":"Which player has scored the most goals in a single FIFA World Cup tournament?
+","Answer":"Just Fontaine","SecondAnswer":"Miroslav Klose","Difficulty":"3
+"},{"id":"68","Question":"Which player, with 653 games, has made the most Premier League appearances?
+","Answer":"Gareth Barry","SecondAnswer":"George Best","Difficulty":"3
+"},{"id":"69","Question":"With 260 goals, who is the Premier League's all-time top scorer?
+","Answer":"Alan Shearer","SecondAnswer":"Sergio Aguero","Difficulty":"1
+"},{"id":"70","Question":"With 202 clean sheets, which goalkeeper has the best record in the Premier League?
+","Answer":"Petr Cech","SecondAnswer":"Van der Sar","Difficulty":"2
+"},{"id":"71","Question":"How many clubs competed in the inaugural Premier League season?
+","Answer":"22","SecondAnswer":"24","Difficulty":"1
+"},{"id":"72","Question":"Which country has won the most World Cups?
+","Answer":"Brazil","SecondAnswer":"Germany","Difficulty":"1
+"},{"id":"73","Question":"In which World Cup did Diego Maradona score his infamous 'Hand of God' goal?
+","Answer":"1986","SecondAnswer":"1974","Difficulty":"2
+"},{"id":"74","Question":"The record number of World Cup goals is 16, scored by who?
+","Answer":"Miroslav Klose","SecondAnswer":"Pele","Difficulty":"2
+"},{"id":"75","Question":"Who is the only player to win the Champions League with three different clubs?
+","Answer":"Clarence Seedorf","SecondAnswer":"Cristiano Ronaldo","Difficulty":"2
+"},{"id":"76","Question":"In which season was the European Cup rebranded as the Champions League?
+","Answer":"1992-93","SecondAnswer":"1996-97","Difficulty":"1
+"},{"id":"77","Question":"Which team was the first from the UK to win the European Cup?
+","Answer":"Celtic","SecondAnswer":"Nottingham Forest","Difficulty":"2
+"},{"id":"78","Question":"The Champions League has been won only once by a team from Romania. Can you name them?
+","Answer":"Steaua Bucharest(now FCSB)","SecondAnswer":"CFR Cluj","Difficulty":"2
+"},{"id":"79","Question":"Which is England's second most successful team in the Champions League?
+","Answer":"Manchester United","SecondAnswer":"Chelsea","Difficulty":"1
+"},{"id":"80","Question":"Which player holds the record for most Champions League winners' medals?
+","Answer":"Francisco Gento","SecondAnswer":"Ferenc Puskás","Difficulty":"3
+"},{"id":"81","Question":"Which outfield player appeared in the Champions League final in three different decades?
+","Answer":"Ryan Giggs","SecondAnswer":"Paolo Maldini","Difficulty":"2"}]
 
     </pre>
       
