--- a/historyQuestions.html
+++ b/historyQuestions.html
@@ -61,6 +61,88 @@
 ","Answer":"Germany","SecondAnswer":"France","Difficulty":"3
 "},{"id":"27","Question":"Which country won the 1978 FIFA World Cup?
 ","Answer":"Argentina","SecondAnswer":"Uruguay","Difficulty":"3
+"},{"id":"28","Question":"Which country won the 1982 FIFA World Cup?
+","Answer":"Italy","SecondAnswer":"Germany","Difficulty":"3
+"},{"id":"29","Question":"Which country won the 1986 FIFA World Cup?
+","Answer":"Argentina","SecondAnswer":"Uruguay","Difficulty":"3
+"},{"id":"30","Question":"Which country won the 1990 FIFA World Cup?
+","Answer":"Germany","SecondAnswer":"Italy","Difficulty":"3
+"},{"id":"31","Question":"Which country won the 1994 FIFA World Cup?
+","Answer":"Brazil","SecondAnswer":"France","Difficulty":"3
+"},{"id":"32","Question":"Which country won the 1998 FIFA World Cup?
+","Answer":"France","SecondAnswer":"Brazil","Difficulty":"3
+"},{"id":"33","Question":"Which country won the 2002 FIFA World Cup?
+","Answer":"Brazil","SecondAnswer":"Germany","Difficulty":"3
+"},{"id":"34","Question":"Which country won the 2006 FIFA World Cup?
+","Answer":"Italy","SecondAnswer":"France","Difficulty":"3
+"},{"id":"35","Question":"Which country won the 2010 FIFA World Cup?
+","Answer":"Spain","SecondAnswer":"Netherlands","Difficulty":"2
+"},{"id":"36","Question":"Which country won the 2014 FIFA World Cup?
+","Answer":"Germany","SecondAnswer":"Argentina","Difficulty":"1
+"},{"id":"37","Question":"Which country won the 2018 FIFA World Cup?
+","Answer":"France","SecondAnswer":"Croatia","Difficulty":"1
+"},{"id":"38","Question":"Which country won the 2022 FIFA World Cup?
+","Answer":"Argentina","SecondAnswer":"France","Difficulty":"1
+"},{"id":"39","Question":"Which year the finals featured 32 teams for the first time, up from 24?
+","Answer":"1998","SecondAnswer":"1994","Difficulty":"3
+"},{"id":"40","Question":"Which year the finals featured 24 teams for the last time?
+","Answer":"1994","SecondAnswer":"1986","Difficulty":"3
+"},{"id":"41","Question":"Which year the finals featured 24 teams for the first time?
+","Answer":"1982","SecondAnswer":"1970","Difficulty":"3
+"},{"id":"42","Question":"Which year the finals featured 16 teams for the last time?
+","Answer":"1978","SecondAnswer":"1966","Difficulty":"3
+"},{"id":"43","Question":"How many teams were in the 1930 World Cup?
+","Answer":"13","SecondAnswer":"16","Difficulty":"3
+"},{"id":"44","Question":"In what year did the UEFA Cup change its name to the UEFA Europa League?
+","Answer":"2009/10","SecondAnswer":"2007/8","Difficulty":"2
+"},{"id":"45","Question":"Which club has won the most FA Cup titles?
+","Answer":"Arsenal","SecondAnswer":"Manchester United","Difficulty":"1
+"},{"id":"46","Question":"Which club has won the most Carabao Cup titles?
+","Answer":"Liverpool","SecondAnswer":"Manchester City","Difficulty":"1
+"},{"id":"47","Question":"Which club has won the most Premier League(and Premiership) titles(1888-)?
+","Answer":"Manchester United","SecondAnswer":"Liverpool","Difficulty":"1
+"},{"id":"48","Question":"Which club has won the most Premier League titles(1992-)?
+","Answer":"Manchester United","SecondAnswer":"Arsenal","Difficulty":"1
+"},{"id":"49","Question":"Which club has won the first Premier League title(1992-)?
+","Answer":"Manchester United","SecondAnswer":"Arsenal","Difficulty":"1
+"},{"id":"50","Question":"Which club has won the first Premier League(and Premiership) title(1888-)?
+","Answer":"Preston North End","SecondAnswer":"Sheffield Football Club","Difficulty":"3
+"},{"id":"51","Question":"Which is the first football club in the world?
+","Answer":"Sheffield Football Club","SecondAnswer":"Preston North End","Difficulty":"2
+"},{"id":"52","Question":"Who scored the fastest hat-trick in Premier League history?
+","Answer":"Sadio Mane","SecondAnswer":"Alan Shearer","Difficulty":"2
+"},{"id":"53","Question":"Who is the only goalkeeper to have won the Ballon d'Or?
+","Answer":"Lev Yashin","SecondAnswer":"Manuel Neuer","Difficulty":"2
+"},{"id":"54","Question":"Who is the only defender to have won the Ballon d'Or?
+","Answer":"Fabio Cannavaro","SecondAnswer":"Sergio Ramos","Difficulty":"1
+"},{"id":"55","Question":"Which club has won the most Scottish Premiership titles?
+","Answer":"Rangers","SecondAnswer":"Celtic","Difficulty":"1
+"},{"id":"56","Question":"Which club has won the Scottish Premiership title except Rangers and Celtic?
+","Answer":"Aberdeen","SecondAnswer":"Hearts","Difficulty":"2
+"},{"id":"57","Question":"In which year did the "Golden Goal" rule come into effect in football?
+","Answer":"1993","SecondAnswer":"1986","Difficulty":"3
+"},{"id":"58","Question":"Which club did Thierry Henry play for before joining Arsenal?
+","Answer":"Monaco","SecondAnswer":"Juventus","Difficulty":"2
+"},{"id":"59","Question":"Who was the first African player to win the FIFA World Player of the Year award?
+","Answer":"George Weah","SecondAnswer":"Mahmoud El Khatib","Difficulty":"3
+"},{"id":"60","Question":"Who was the manager of the Liverpool team that won the UEFA Champions League in 2005,coming back from a 3-0 deficit to win on penalties?
+","Answer":"Rafael Benítez","SecondAnswer":"Roy Hodgson","Difficulty":"3
+"},{"id":"61","Question":"Which team is nicknamed "The Baggies"?
+","Answer":"West Bromwich Albion","SecondAnswer":"Aston Villa","Difficulty":"2
+"},{"id":"62","Question":"In which year was the Video Assistant Referee (VAR) system first introduced in official competitions?
+","Answer":"2016","SecondAnswer":"2015","Difficulty":"3
+"},{"id":"63","Question":"Which Italian referee was known for his strict enforcement of the rules and was often referred to as the "Policeman of the Pitch"?
+","Answer":"Pierluigi Collina","SecondAnswer":"Daniele Orsato","Difficulty":"1
+"},{"id":"64","Question":"Which club holds the record for the most consecutive promotions in English football, climbing from the fourth to the first division in just four seasons?
+","Answer":"Swansea City","SecondAnswer":"Leicester City","Difficulty":"3
+"},{"id":"65","Question":"Who is the oldest outfield player to have ever appeared in a Premier League match?
+","Answer":"John Burridge","SecondAnswer":"Neville Southall","Difficulty":"3
+"},{"id":"66","Question":"Which stadium is known as "The Theatre of Dreams"?
+","Answer":"Old Trafford","SecondAnswer":"Anfield","Difficulty":"1
+"},{"id":"67","Question":"Which player has scored the most goals in a single FIFA World Cup tournament?
+","Answer":"Just Fontaine","SecondAnswer":"Miroslav Klose","Difficulty":"3
+"},{"id":"68","Question":"Which player, with 653 games, has made the most Premier League appearances?
+","Answer":"Gareth Barry","SecondAnswer":"George Best","Difficulty":"3
 "}]
 
     </pre>
