--- a/historyQuestions.html
+++ b/historyQuestions.html
@@ -107,6 +107,26 @@
 ","Answer":"Manchester United","SecondAnswer":"Arsenal","Difficulty":"1
 "},{"id":"50","Question":"Which club has won the first Premier League(and Premiership) title(1888-)?
 ","Answer":"Preston North End","SecondAnswer":"Sheffield Football Club","Difficulty":"3
+"},{"id":"51","Question":"Which is the first football club in the world?
+","Answer":"Sheffield Football Club","SecondAnswer":"Preston North End","Difficulty":"2
+"},{"id":"52","Question":"Who scored the fastest hat-trick in Premier League history?
+","Answer":"Sadio Mane","SecondAnswer":"Alan Shearer","Difficulty":"2
+"},{"id":"53","Question":"Who is the only goalkeeper to have won the Ballon d'Or?
+","Answer":"Lev Yashin","SecondAnswer":"Manuel Neuer","Difficulty":"2
+"},{"id":"54","Question":"Who is the only defender to have won the Ballon d'Or?
+","Answer":"Fabio Cannavaro","SecondAnswer":"Sergio Ramos","Difficulty":"1
+"},{"id":"55","Question":"Which club has won the most Scottish Premiership titles?
+","Answer":"Rangers","SecondAnswer":"Celtic","Difficulty":"1
+"},{"id":"56","Question":"Which club has won the Scottish Premiership title except Rangers and Celtic?
+","Answer":"Aberdeen","SecondAnswer":"Hearts","Difficulty":"2
+"},{"id":"57","Question":"In which year did the "Golden Goal" rule come into effect in football?
+","Answer":"1993","SecondAnswer":"1986","Difficulty":"3
+"},{"id":"58","Question":"Which club did Thierry Henry play for before joining Arsenal?
+","Answer":"Monaco","SecondAnswer":"Juventus","Difficulty":"2
+"},{"id":"59","Question":"Who was the first African player to win the FIFA World Player of the Year award?
+","Answer":"George Weah","SecondAnswer":"Mahmoud El Khatib","Difficulty":"3
+"},{"id":"60","Question":"Who was the manager of the Liverpool team that won the UEFA Champions League in 2005,coming back from a 3-0 deficit to win on penalties?
+","Answer":"Rafael Benítez","SecondAnswer":"Roy Hodgson","Difficulty":"3
 "}]
 
     </pre>
