--- a/historyQuestions.html
+++ b/historyQuestions.html
@@ -117,6 +117,10 @@
 ","Answer":"Fabio Cannavaro","SecondAnswer":"Sergio Ramos","Difficulty":"1
 "},{"id":"55","Question":"Which club has won the most Scottish Premiership titles?
 ","Answer":"Rangers","SecondAnswer":"Celtic","Difficulty":"1
+"},{"id":"56","Question":"Which club has won the Scottish Premiership title except Rangers and Celtic?
+","Answer":"Aberdeen","SecondAnswer":"Hearts","Difficulty":"2
+"},{"id":"57","Question":"In which year did the "Golden Goal" rule come into effect in football?
+","Answer":"1993","SecondAnswer":"1986","Difficulty":"3
 "}]
 
     </pre>
