--- a/historyQuestions.html
+++ b/historyQuestions.html
@@ -119,9 +119,56 @@
 ","Answer":"Rangers","SecondAnswer":"Celtic","Difficulty":"1
 "},{"id":"56","Question":"Which club has won the Scottish Premiership title except Rangers and Celtic?
 ","Answer":"Aberdeen","SecondAnswer":"Hearts","Difficulty":"2
-"},{"id":"57","Question":"In which year did the "Golden Goal" rule come into effect in football?
+"},{"id":"57","Question":"In which year did the 'Golden Goal' rule come into effect in football?
 ","Answer":"1993","SecondAnswer":"1986","Difficulty":"3
-"}]
+"},{"id":"58","Question":"Which club did Thierry Henry play for before joining Arsenal?
+","Answer":"Monaco","SecondAnswer":"Juventus","Difficulty":"2
+"},{"id":"59","Question":"Who was the first African player to win the FIFA World Player of the Year award?
+","Answer":"George Weah","SecondAnswer":"Mahmoud El Khatib","Difficulty":"3
+"},{"id":"60","Question":"Who was the manager of the Liverpool team that won the UEFA Champions League in 2005,coming back from a 3-0 deficit to win on penalties?
+","Answer":"Rafael Benítez","SecondAnswer":"Roy Hodgson","Difficulty":"3
+"},{"id":"61","Question":"Which team is nicknamed 'The Baggies'?
+","Answer":"West Bromwich Albion","SecondAnswer":"Aston Villa","Difficulty":"2
+"},{"id":"62","Question":"In which year was the Video Assistant Referee (VAR) system first introduced in official competitions?
+","Answer":"2016","SecondAnswer":"2015","Difficulty":"3
+"},{"id":"63","Question":"Which Italian referee was known for his strict enforcement of the rules and was often referred to as the 'Policeman of the Pitch'?
+","Answer":"Pierluigi Collina","SecondAnswer":"Daniele Orsato","Difficulty":"1
+"},{"id":"64","Question":"Which club holds the record for the most consecutive promotions in English football, climbing from the fourth to the first division in just four seasons?
+","Answer":"Swansea City","SecondAnswer":"Leicester City","Difficulty":"3
+"},{"id":"65","Question":"Who is the oldest outfield player to have ever appeared in a Premier League match?
+","Answer":"John Burridge","SecondAnswer":"Neville Southall","Difficulty":"3
+"},{"id":"66","Question":"Which stadium is known as 'The Theatre of Dreams'?
+","Answer":"Old Trafford","SecondAnswer":"Anfield","Difficulty":"1
+"},{"id":"67","Question":"Which player has scored the most goals in a single FIFA World Cup tournament?
+","Answer":"Just Fontaine","SecondAnswer":"Miroslav Klose","Difficulty":"3
+"},{"id":"68","Question":"Which player, with 653 games, has made the most Premier League appearances?
+","Answer":"Gareth Barry","SecondAnswer":"George Best","Difficulty":"3
+"},{"id":"69","Question":"With 260 goals, who is the Premier League's all-time top scorer?
+","Answer":"Alan Shearer","SecondAnswer":"Sergio Aguero","Difficulty":"1
+"},{"id":"70","Question":"With 202 clean sheets, which goalkeeper has the best record in the Premier League?
+","Answer":"Petr Cech","SecondAnswer":"Van der Sar","Difficulty":"2
+"},{"id":"71","Question":"How many clubs competed in the inaugural Premier League season?
+","Answer":"22","SecondAnswer":"24","Difficulty":"1
+"},{"id":"72","Question":"Which country has won the most World Cups?
+","Answer":"Brazil","SecondAnswer":"Germany","Difficulty":"1
+"},{"id":"73","Question":"In which World Cup did Diego Maradona score his infamous 'Hand of God' goal?
+","Answer":"1986","SecondAnswer":"1974","Difficulty":"2
+"},{"id":"74","Question":"The record number of World Cup goals is 16, scored by who?
+","Answer":"Miroslav Klose","SecondAnswer":"Pele","Difficulty":"2
+"},{"id":"75","Question":"Who is the only player to win the Champions League with three different clubs?
+","Answer":"Clarence Seedorf","SecondAnswer":"Cristiano Ronaldo","Difficulty":"2
+"},{"id":"76","Question":"In which season was the European Cup rebranded as the Champions League?
+","Answer":"1992-93","SecondAnswer":"1996-97","Difficulty":"1
+"},{"id":"77","Question":"Which team was the first from the UK to win the European Cup?
+","Answer":"Celtic","SecondAnswer":"Nottingham Forest","Difficulty":"2
+"},{"id":"78","Question":"The Champions League has been won only once by a team from Romania. Can you name them?
+","Answer":"Steaua Bucharest(now FCSB)","SecondAnswer":"CFR Cluj","Difficulty":"2
+"},{"id":"79","Question":"Which is England's second most successful team in the Champions League?
+","Answer":"Manchester United","SecondAnswer":"Chelsea","Difficulty":"1
+"},{"id":"80","Question":"Which player holds the record for most Champions League winners' medals?
+","Answer":"Francisco Gento","SecondAnswer":"Ferenc Puskás","Difficulty":"3
+"},{"id":"81","Question":"Which outfield player appeared in the Champions League final in three different decades?
+","Answer":"Ryan Giggs","SecondAnswer":"Paolo Maldini","Difficulty":"2"}]
 
     </pre>
       
