--- a/whoIsMissingQuestions.html
+++ b/whoIsMissingQuestions.html
@@ -8,7 +8,7 @@
            [{"id":"0","Question":"Man City vs Barcelona\nChampions League Semi Final 2023-2024
 ","Answer":"Ederson Moraes-Kyle Walker-Ruben Dias-Manuel Akanji-John Stones-Rodri-Bernardo Silva-Kevin De Brune-Ilkay Gundogan-Jack Grealish-Erling Haaland","SecondAnswer":"32041","Difficulty":"3
 "},{"id":"1","Question":"Man City vs Barcelona\nChampions League Semi Final 2023-2024,
-","Answer":"Marc Andre ter Stegen-Joao Cancelo-Andreas Christensen-Inigo Martinez-Alex Balde-Oriol Romeu-Ilkay Gudogan-Gavi-Ferran Torres-Joao Felix-Lopez","SecondAnswer":"41203","Difficulty":"3"}]
+","Answer":"Marc Andre ter Stegen-Joao Cancelo-Andreas Christensen-Inigo Martinez-Alex Balde-Oriol Romeu-Ilkay Gundogan-Gavi-Ferran Torres-Joao Felix-Lopez","SecondAnswer":"41203","Difficulty":"3"}]
 
     </pre>
       
