--- a/historyQuestions.html
+++ b/historyQuestions.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-[{"id":"0","Question":"Who assisted Zidane's goal in the Champions League Final of 2002?
+
+      [{"id":"0","Question":"Who assisted Zidane's goal in the Champions League Final of 2002?
 ","Answer":"Roberto Carlos","SecondAnswer":"Raul","Difficulty":"2
 "},{"id":"1","Question":"Which team was the finalist of the first European Cup with Real Madrid as the winner?
 ","Answer":"Stade Reims","SecondAnswer":"Fiorentina","Difficulty":"3
@@ -168,8 +169,41 @@
 "},{"id":"80","Question":"Which player holds the record for most Champions League winners' medals?
 ","Answer":"Francisco Gento","SecondAnswer":"Ferenc Puskás","Difficulty":"3
 "},{"id":"81","Question":"Which outfield player appeared in the Champions League final in three different decades?
-","Answer":"Ryan Giggs","SecondAnswer":"Paolo Maldini","Difficulty":"2"}]
-
+","Answer":"Ryan Giggs","SecondAnswer":"Paolo Maldini","Difficulty":"2
+"},{"id":"82","Question":"Liverpool,Nottingham Forest and one other team won 6 straight European titles from 1977 to 1982.Who was the other team?
+","Answer":"Aston Villa","SecondAnswer":"Manchester United","Difficulty":"2
+"},{"id":"83","Question":"How many titles did Diego Maradona get at Napoli?
+","Answer":"5","SecondAnswer":"4","Difficulty":"3
+"},{"id":"84","Question":"Which team has the record for the most goals scored in the Champions League in one season?
+","Answer":"Barcelona","SecondAnswer":"Bayern Munich","Difficulty":"1
+"},{"id":"85","Question":"Who is the last defender to win the Balon d'or?
+","Answer":"Fabio Cannavaro","SecondAnswer":"Sergio Ramos","Difficulty":"1
+"},{"id":"86","Question":"How many years was Arsene Wenger coach at Arsenal?
+","Answer":"22","SecondAnswer":"24","Difficulty":"2
+"},{"id":"87","Question":"Who had the most clean sheets in the Premier League in a season?
+","Answer":"Petr Cech","SecondAnswer":"Alisson Becker","Difficulty":"1
+"},{"id":"88","Question":"How many were the most clean sheets in the Premier League in a season?
+","Answer":"24","SecondAnswer":"21","Difficulty":"1
+"},{"id":"89","Question":"What was the number of the most goals scored by two teams in a Champions League match?
+","Answer":"12","SecondAnswer":"11","Difficulty":"3
+"},{"id":"90","Question":"Which team has won the most Copa Africa titles?
+","Answer":"Egypt","SecondAnswer":"Cameroon","Difficulty":"2
+"},{"id":"91","Question":"Who won the Ballon d'Or in 2007?
+","Answer":"Kaka","SecondAnswer":"Ronaldinho","Difficulty":"2
+"},{"id":"92","Question":"Who won the Ballon d'Or in 2006?
+","Answer":"Fabio Cannavaro","SecondAnswer":"Kaka","Difficulty":"2
+"},{"id":"93","Question":"Who won the Ballon d'Or in 2005?
+","Answer":"Ronaldinho","SecondAnswer":"Kaka","Difficulty":"2
+"},{"id":"94","Question":"Who won the Ballon d'Or in 2004?
+","Answer":"Ronaldinho","SecondAnswer":"Ronaldo","Difficulty":"2
+"},{"id":"95","Question":"Who won the Ballon d'Or in 2003?
+","Answer":"Pavel Nedved","SecondAnswer":"Ronaldo","Difficulty":"3
+"},{"id":"96","Question":"Who won the Ballon d'Or in 2002?
+","Answer":"Ronaldo","SecondAnswer":"Pavel Nedved","Difficulty":"2
+"},{"id":"97","Question":"Who won the Ballon d'Or in 2001?
+","Answer":"Michael Owen","SecondAnswer":"Ronaldo","Difficulty":"2
+"},{"id":"98","Question":"Who won the Ballon d'Or in 2000?
+","Answer":"Luís Figo","SecondAnswer":"Michael Owen","Difficulty":"3"}]
     </pre>
       
     <div id="speechify-global-notifications"></div>
